--- a/index.html
+++ b/index.html
@@ -220,31 +220,25 @@
   <!-- Social Box -->
   <div class="social-box">
     <h1>SOCI4LS</h1>
-    <a class="social-link" href="https://www.instagram.com/prath4mfr?igsh=MW52NDlxOWE5OHA4aw==" target="_blank">
+    <a class="social-link" href="https://www.instagram.com/mokshjai9/" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram"> Instagram
     </a>
-    <a class="social-link" href="#" onclick="navigator.clipboard.writeText('742604865888452688'); alert('Discord ID copied!'); return false;">
-      <img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" alt="Discord"> Discord
+    <a class="social-link" href="https://www.linkedin.com/in/moksh-jain-379aa2373/" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn"> LinkedIn
     </a>
-    <a class="social-link" href="https://x.com/PrathamPoswal?t=NYN2KZT9G1vkDWoqzvuggA&s=09" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/5968/5968830.png" alt="X"> X
-    </a>
-    <a class="social-link" href="https://youtube.com/@notsmilyjungle?si=-HRsBp0Dmx5_PqpO" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube"> YouTube
-    </a>
-    <a class="social-link" href="https://open.spotify.com/user/s9s8a7ps81ln4nzxvxtfcp0yw" target="_blank">
+    <a class="social-link" href="https://open.spotify.com/user/3ux5cqwe54e9u8t4eo8kv5gfi" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/512/174/174872.png" alt="Spotify"> Spotify
     </a>
-    <a class="social-link" href="https://www.reddit.com/u/EstablishmentRich970/s/285XUwmisL" target="_blank">
+    <a class="social-link" href="https://www.reddit.com/user/mastmeow/" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/512/2111/2111589.png" alt="Reddit"> Reddit
     </a>
-    <a class="social-link" href="https://www.roblox.com/share?code=75df44055b274a4d92b29cd9ba8e359e&type=Profile&source=ProfileShare&stamp=1751911827813" target="_blank">
-      <img src="https://www.citypng.com/public/uploads/preview/hd-roblox-white-symbol-sign-icon-logo-png-701751694787435ra1r2desi8.png" alt="Roblox"> Roblox
+    <a class="social-link" href="https://discord.com/users/1314718891968041001" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" alt="Discord"> Discord
     </a>
 
     <!-- NEW BUTTON -->
     <div class="know-more-container">
-      <a href="pratham.html" class="know-more-btn">Know More About Pratham &gt;&gt;&gt;</a>
+      <a href="pratham.html" class="know-more-btn">Know More About Moksh &gt;&gt;&gt;</a>
     </div>
   </div>
 
