--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
   <!-- Social Box -->
   <div class="social-box">
-    <h1>SOCI4LS</h1>
+    <h1>SOCIALS</h1>
     <a class="social-link" href="https://www.instagram.com/mokshjai9/" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram"> Instagram
     </a>
@@ -291,3 +291,4 @@
   </script>
 </body>
 </html>
+
