--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
     <!-- NEW BUTTON -->
     <div class="know-more-container">
-      <a href="pratham.html" class="know-more-btn">Know More About Moksh &gt;&gt;&gt;</a>
+      <a href="moksh.html" class="know-more-btn">Know More About Moksh &gt;&gt;&gt;</a>
     </div>
   </div>
 
