--- a/whoismoksh.html
+++ b/whoismoksh.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Who is Pratham</title>
+  <title>Who is Moksh</title>
   <style>
     html, body {
       margin: 0;
