--- a/end.html
+++ b/end.html
@@ -130,7 +130,7 @@
   </video>
 
   <!-- Back Button -->
-  <a href="pratham.html" class="back-button">BACK</a>
+  <a href="moksh.html" class="back-button">BACK</a>
 
   <!-- Rotate Warning -->
   <div class="rotate-warning" id="rotateMsg">
