--- a/girlypop.html
+++ b/girlypop.html
@@ -193,7 +193,7 @@
   <input type="range" id="volumeSlider" class="volume-slider" min="0" max="1" step="0.01">
 
   <!-- Back Button -->
-  <a href="pratham.html" class="back-button">Back</a>
+  <a href="moksh.html" class="back-button">Back</a>
 
   <!-- Background Music -->
   <audio id="bgMusic" loop autoplay>
