--- a/moksh.html
+++ b/moksh.html
@@ -209,10 +209,10 @@
   </video>
 
   <!-- Heading -->
-  <img src="graph.png" alt="PRATH4M" class="graffiti-heading" />
+  <img src="graph.png" alt="MOKSH" class="graffiti-heading" />
 
   <!-- Buttons -->
-  <div class="whois-box"><a href="whoispratham.html"><img src="whoispratham.png" alt="Who is Pratham?" /></a></div>
+  <div class="whois-box"><a href="whoismoksh.html"><img src="whoismoksh.png" alt="Who is moksh?" /></a></div>
   <div class="game-box"><a href="gayme.html"><img src="game.png" alt="Games" /></a></div>
   <div class="danger-box"><a href="danger.html"><img src="danger.png" alt="Danger" /></a></div>
   <div class="girlypop-box"><a href="girlypop.html"><img src="girlypop.png" alt="Girly Pop" /></a></div>
