--- a/slides.html
+++ b/slides.html
@@ -98,7 +98,7 @@
       height="569" 
       allowfullscreen></iframe>
 
-    <p><a href="home.html">← Back to Home</a></p>
+    <p><a href="girlypop.html">← Back to Home</a></p>
   </div>
 </body>
 </html>
