--- a/whoismoksh.html
+++ b/whoismoksh.html
@@ -133,7 +133,7 @@
   <audio id="bgAudio" src="starlun.mp3"></audio>
 
   <!-- Back Button -->
-  <a href="pratham.html" class="back-button">BACK</a>
+  <a href="moksh.html" class="back-button">BACK</a>
 
   <!-- Rotate Warning -->
   <div class="rotate-warning" id="rotateMsg">
