--- a/girlypop.html
+++ b/girlypop.html
@@ -167,7 +167,7 @@
 </head>
 <body class="home-page">
   <div class="menu">
-    <h1>PR4THAM!</h1>
+    <h1>Moksh!</h1>
   </div>
 
   <!-- Floating Links -->
