--- a/girlypop.html
+++ b/girlypop.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Home</title>
+  <title>Girlypop</title>
   <link rel="icon" type="image/png" href="favicon1.png" />
   <style>
     /* ===== UNIVERSAL CURSOR ===== */
@@ -23,7 +23,7 @@
       overflow: hidden;
     }
 
-    body.home-page {
+    body.Girlypop-page {
       background: url('Hellokitty.jpg') no-repeat center center fixed;
       background-size: cover;
     }
@@ -165,7 +165,7 @@
     }
   </style>
 </head>
-<body class="home-page">
+<body class="Girlypop-page">
   <div class="menu">
     <h1>Moksh!</h1>
   </div>
