--- a/girlypop.html
+++ b/girlypop.html
@@ -181,12 +181,13 @@
   </div>
 
   <!-- Video Popup -->
-  <div id="videoPopup">
-    <video id="popupVideo" controls>
+  <div id="videoPopup" style="display:block;">
+    <video id="popupVideo" controls autoplay muted width="600">
       <source src="stateside.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
+
 
   <!-- Music Controls -->
   <button id="musicControl" class="music-control">Pause Music</button>
