--- a/girlypop.html
+++ b/girlypop.html
@@ -181,8 +181,8 @@
   </div>
 
   <!-- Video Popup -->
-  <div id="videoPopup" style="display:block;">
-    <video id="popupVideo" controls autoplay muted width="600">
+  <div id="videoPopup">
+    <video id="popupVideo" controls>
       <source src="stateside.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
