--- a/moksh.html
+++ b/moksh.html
@@ -223,11 +223,11 @@
 
   <!-- Pass PNG -->
   <div class="pass-container" id="passTrigger">
-    <img src="pass.png" alt="Pass" />
+    <img src="moku1.png" alt="Pass" />
   </div>
   <div class="pass-overlay" id="passOverlay">
     <span class="close-pass" id="closePass">&times;</span>
-    <img src="pass.png" alt="Pass Expanded" />
+    <img src="moku1.png" alt="Pass Expanded" />
   </div>
 
   <!-- Back Button -->
