--- a/moksh.html
+++ b/moksh.html
@@ -231,7 +231,7 @@
   </div>
 
   <!-- Back Button -->
-  <a href="index.html" class="back-button">BACK</a>
+  <a href="index.html" class="back-button">SOCIAL HANDLES</a>
 
   <!-- Music Controls -->
   <div class="music-controls">
