--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
   </div>
 
   <!-- Back Button -->
-  <a href="index.html" class="back-button">SOCIAL HANDLES</a>
+  <a href="social.html" class="back-button">SOCIAL HANDLES</a>
 
   <!-- Music Controls -->
   <div class="music-controls">
