--- a/danger.html
+++ b/danger.html
@@ -135,7 +135,7 @@
     <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="0.5">
   </div>
 
-  <a href="moksh.html" class="back-btn">BACK</a>
+  <a href="index.html" class="back-btn">BACK</a>
 
   <audio id="demonAudio" src="dumbo.mp3" autoplay loop></audio>
 
