--- a/gayme.html
+++ b/gayme.html
@@ -223,7 +223,7 @@
   </div>
 
   <!-- Back Button -->
-  <a href="moksh.html" class="back-button">BACK</a>
+  <a href="index.html" class="back-button">BACK</a>
 
   <!-- Music Controls -->
   <div class="music-controls">
