--- a/social.html
+++ b/social.html
@@ -238,7 +238,7 @@
 
     <!-- NEW BUTTON -->
     <div class="know-more-container">
-      <a href="moksh.html" class="know-more-btn">GO BACK &gt;&gt;&gt;</a>
+      <a href="index.html" class="know-more-btn">GO BACK &gt;&gt;&gt;</a>
     </div>
   </div>
 
